--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
             font-weight: 600;
         }
 
-        /* Hero Section — всегда видима, не использует общее opacity секций */
+        /* Hero Section — всегда видима, заполняет экран и центрирует контент */
         .hero {
             width: 100%;
             max-width: 100%;
             min-height: 100vh;
+            height: 100vh;
             opacity: 1;
             transform: none;
             overflow-x: hidden;
@@ -60,10 +61,10 @@
             background-position: center;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
+            justify-content: center; /* center vertically */
+            align-items: center;     /* center horizontally */
             text-align: center;
-            padding: 4rem 2rem 2.5rem;
+            padding: 0 2rem; /* reduce top/bottom padding so hero fills screen neatly */
             position: relative;
         }
 
@@ -84,26 +85,29 @@
             position: relative;
             z-index: 1;
             animation: fadeInUp 1s ease-out;
-            max-width: 640px;
+            max-width: 720px;
+            width: 100%;
+            padding: 1rem 0; /* small vertical padding so content breathes */
         }
 
         .hero h1 {
             font-family: 'Great Vibes', cursive;
-            font-size: clamp(2.6rem, 8vw, 4.2rem);
+            font-size: clamp(1.8rem, 4.5vw, 2.8rem); /* slightly smaller Save the date */
             color: var(--dark-gray);
-            margin-bottom: 0.25rem;
+            margin-bottom: 0.35rem;
             text-shadow: 0 1px 2px rgba(255, 255, 255, 1), 0 2px 8px rgba(0, 0, 0, 0.08);
-            letter-spacing: 0.04em;
+            letter-spacing: 0.02em;
         }
 
         .hero .names {
             font-family: 'Great Vibes', cursive;
-            font-size: clamp(3.6rem, 11vw, 6rem);
+            font-size: clamp(3.2rem, 12vw, 6rem);
             color: var(--lavender);
             margin-bottom: 0.6rem;
             font-weight: 400;
-            letter-spacing: 0.08em;
+            letter-spacing: 0.06em;
             text-align: center;
+            line-height: 1.08; /* increase line-height to avoid overlapping on small screens */
         }
 
         .hero .date {
@@ -1278,37 +1282,40 @@
                 max-width: 240px;
             }
 
-            /* Compact hero for small screens: reduce empty space, increase mobile font sizes, improve line-height */
+            /* Full-screen hero on mobile: center content vertically and horizontally */
             .hero {
-                padding: 1.6rem 1rem 1rem;
-                min-height: 56vh;
+                padding: 0 1rem;
+                min-height: 100vh;
+                height: 100vh;
                 display: flex;
-                align-items: flex-start;
+                align-items: center;
+                justify-content: center;
             }
 
             .hero .hero-content {
                 width: 100%;
-                padding: 0 1rem;
+                max-width: 720px;
+                padding: 0.6rem 0;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                justify-content: flex-start;
+                justify-content: center;
             }
 
             .hero h1 {
-                font-size: clamp(2.8rem, 9.5vw, 4rem);
-                margin-bottom: 0.1rem;
+                font-size: clamp(1.8rem, 6vw, 2.8rem);
+                margin-bottom: 0.15rem;
             }
 
             .hero .names {
-                font-size: clamp(3.6rem, 14vw, 6rem);
-                line-height: 1.06; /* avoid overlapping */
-                margin-bottom: 0.4rem;
+                font-size: clamp(3.6rem, 18vw, 6.4rem);
+                line-height: 1.12; /* increase to avoid overlap */
+                margin-bottom: 0.5rem;
             }
 
             .hero .date {
-                font-size: clamp(1.1rem, 4.2vw, 1.7rem);
-                margin-bottom: 0.8rem;
+                font-size: clamp(1.05rem, 4.2vw, 1.6rem);
+                margin-bottom: 0.6rem;
             }
 
             .date-number {
