--- a/guests.html
+++ b/guests.html
@@ -336,7 +336,7 @@
 </head>
 <body>
   <main class="wrap">
-    <h1>Ответы гостей</h1>
+    <!--<h1>Ответы гостей</h1>
 
     <p>
       Если ты используешь <b>Formspree</b>, то ответы хранятся в их панели управления.
@@ -353,7 +353,7 @@
         Если хочешь именно страницу <code>/guests</code> со списком ответов — можно сделать через Formspree
         + Google Sheets (вебхук) и читать уже опубликованную таблицу (без сервера).
       </p>
-    </div>
+    </div> -->
 
     <a class="btn" href="./index.html">← Назад на приглашение</a>
   </main>
