--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="icon.ico" sizes="any">
+    <link rel="icon" href="icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="icon.png">
     <title>Захар и Кристина - Свадебное приглашение</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1520,7 +1523,7 @@
             <div class="location-photo-wrap">
                 <img src="image/photo_2026.jpg" alt="Начало венчания" width="160" height="160">
             </div>
-            <h3>Венчание 12:00</h3>
+            <h3>Венчание</h3>
             <p class="location-address">
                 Мошенского, 66, г. Брест
             </p>
@@ -1550,11 +1553,12 @@
             Нам будет очень приятно видеть джентльменов в классических костюмах, а дам - в нежных платьях следующих оттенков
         </p>
         <div class="color-palette">
+            <div class="color-swatch" style="background: #F4BBC4;" title="#F4BBC4"></div>
             <div class="color-swatch" style="background: #AA83B6;" title="#AA83B6"></div>
             <div class="color-swatch" style="background: #D4C1E8;" title="#D4C1E8"></div>
-            <div class="color-swatch" style="background: #F4BBC4;" title="#F4BBC4"></div>
+          
             <div class="color-swatch" style="background: #FFDFE5;" title="#FFDFE5"></div>
-            <div class="color-swatch" style="background: #FFFFFF; border: 2px solid #D4C1E8;" title="#FFFFFF"></div>
+            <div class="color-swatch" style="background: #FFDFFF;" title="#FFFFFF"></div>
         </div>
         <div class="dress-code-examples">
             <div class="dress-code-col">
@@ -1629,7 +1633,7 @@
 
                 <div class="form-group">
                     <label for="guest-comments">Комментарий</label>
-                    <textarea id="guest-comments" name="comments" placeholder="Если хотите — оставьте комментарий и пожелание"></textarea>
+                    <textarea id="guest-comments" name="comments" placeholder="Здесь вы можете оставить комментарий или заметки"></textarea>
                 </div>
                 <!--  <div class="form-group required">
                     <label for="persons">Количество персон</label>
