--- a/index.html
+++ b/index.html
@@ -1498,7 +1498,7 @@
                         <div class="timeline-text">Праздничный банкет</div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-time">🤍 22:30</div>
+                        <div class="timeline-time">🤍 23:00</div>
                         <div class="timeline-text">Завершение свадьбы</div>
                     </div>
                 </div>
@@ -1527,6 +1527,8 @@
             <p class="location-address">
                 Мошенского, 66, г. Брест
             </p>
+            <a href="https://yandex.by/maps/-/CPEt5L5e" target="_blank" class="btn" style="margin-top: 1rem;">Как добраться</a>
+
            <!--   <p class="location-address" style="font-weight: 600; color: var(--lavender);">
                 Мошенского, 66, г. Брест
             </p>-->
@@ -1571,7 +1573,7 @@
             <div class="dress-code-col">
                 <div class="dress-code-photo-wrap">
                     <!-- Подставьте адрес фото для джентльменов в src -->
-                    <img src="image/IMG_2862.JPG" alt="Пример для джентльменов" width="280" height="373">
+                    <img src="image/photo_2026-02-08_15-29-39.jpg" alt="Пример для джентльменов" width="280" height="373">
                 </div>
                 <p class="dress-code-col-caption">Пример для джентльменов</p>
                 <p class="dress-code-col-caption">(любой костюм)</p>
