--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="icon.ico" sizes="any">
-    <link rel="icon" href="icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="icon.png">
     <title>Захар и Кристина - Свадебное приглашение</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1498,7 +1495,7 @@
                         <div class="timeline-text">Праздничный банкет</div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-time">🤍 23:00</div>
+                        <div class="timeline-time">🤍 22:30</div>
                         <div class="timeline-text">Завершение свадьбы</div>
                     </div>
                 </div>
@@ -1527,8 +1524,6 @@
             <p class="location-address">
                 Мошенского, 66, г. Брест
             </p>
-            <a href="https://yandex.by/maps/-/CPEt5L5e" target="_blank" class="btn" style="margin-top: 1rem;">Как добраться</a>
-
            <!--   <p class="location-address" style="font-weight: 600; color: var(--lavender);">
                 Мошенского, 66, г. Брест
             </p>-->
@@ -1555,12 +1550,11 @@
             Нам будет очень приятно видеть джентльменов в классических костюмах, а дам - в нежных платьях следующих оттенков
         </p>
         <div class="color-palette">
-            <div class="color-swatch" style="background: #F4BBC4;" title="#F4BBC4"></div>
             <div class="color-swatch" style="background: #AA83B6;" title="#AA83B6"></div>
             <div class="color-swatch" style="background: #D4C1E8;" title="#D4C1E8"></div>
-          
+            <div class="color-swatch" style="background: #F4BBC4;" title="#F4BBC4"></div>
             <div class="color-swatch" style="background: #FFDFE5;" title="#FFDFE5"></div>
-            <div class="color-swatch" style="background: #FFDFFF;" title="#FFFFFF"></div>
+            <div class="color-swatch" style="background: #FFFFFF; border: 2px solid #D4C1E8;" title="#FFFFFF"></div>
         </div>
         <div class="dress-code-examples">
             <div class="dress-code-col">
@@ -1573,7 +1567,7 @@
             <div class="dress-code-col">
                 <div class="dress-code-photo-wrap">
                     <!-- Подставьте адрес фото для джентльменов в src -->
-                    <img src="image/photo_2026-02-08_15-29-39.jpg" alt="Пример для джентльменов" width="280" height="373">
+                    <img src="image/IMG_2862.JPG" alt="Пример для джентльменов" width="280" height="373">
                 </div>
                 <p class="dress-code-col-caption">Пример для джентльменов</p>
                 <p class="dress-code-col-caption">(любой костюм)</p>
@@ -2030,8 +2024,30 @@
                 return decoded.split(/[^а-яёА-ЯЁa-zA-Z]+/).filter(Boolean);
             }
 
+            /** Merge name + patronymic into one entry (e.g. Николай + Николаевич → "Николай Николаевич") */
+            function mergeNamePatronymic(words) {
+                if (!words || words.length <= 1) return words || [];
+                // Russian patronymic endings
+                const patronymicEndings = /(ович|евич|овна|евна|ична|ич|ёвич|ёвна)$/i;
+                const result = [];
+                let i = 0;
+                while (i < words.length) {
+                    const word = words[i];
+                    const next = words[i + 1];
+                    if (next && patronymicEndings.test(next)) {
+                        result.push(word + ' ' + next);
+                        i += 2;
+                    } else {
+                        result.push(word);
+                        i += 1;
+                    }
+                }
+                return result;
+            }
+
             const queryString = window.location.search.substring(1);
             let names = parseNamesFromQuery(queryString);
+            names = mergeNamePatronymic(names);
 
             // If no names from URL, try to load from cache
             if (names.length === 0) {
