--- a/guests.html
+++ b/guests.html
@@ -86,6 +86,24 @@
     .pwbox input{width:100%; padding:0.6rem; border-radius:8px; border:1px solid rgba(170,131,182,0.12); margin-top:0.6rem}
     .pwbox button{ margin-top:0.75rem; padding:0.55rem 0.9rem; border-radius:8px; border:0; background:var(--lavender); color:white; cursor:pointer}
     .note{font-size:0.85rem; color:var(--muted); margin-top:0.5rem}
+    .stats{
+      display:flex;
+      flex-wrap:wrap;
+      gap:1rem;
+      justify-content:center;
+      margin-bottom:1.25rem;
+    }
+    .stat{
+      background:rgba(255,255,255,0.9);
+      border:1px solid rgba(212,193,232,0.35);
+      border-radius:12px;
+      padding:0.75rem 1.25rem;
+      text-align:center;
+      min-width:140px;
+    }
+    .stat-num{ font-size:1.75rem; font-weight:700; color:var(--lavender); font-family:'Playfair Display',serif; }
+    .stat-label{ font-size:0.85rem; color:var(--muted); margin-top:0.2rem; }
+    .card .reg-date{ font-size:0.85rem; color:var(--muted); margin-top:0.5rem; }
     @media (max-width:520px){
       .grid{grid-template-columns:1fr}
     }
@@ -94,6 +112,7 @@
 <body>
   <div class="wrap">
     <h1>Список гостей</h1>
+    <div id="stats" class="stats" aria-live="polite"></div>
     <div class="controls">
       <input id="search" type="search" placeholder="Поиск по фамилии или имени">
       <select id="filter">
@@ -113,7 +132,7 @@
       <div style="margin-top:0.5rem">Введите простой пароль для доступа</div>
       <input id="pw" type="password" placeholder="Пароль">
       <button id="pwSubmit">Открыть</button>
-      <div class="note">Пароль хранится в коде страницы. Это простая защита — не используйте её для секретных данных.</div>
+      <div class="note">Это простая защита — не используйте её для секретных данных.</div>
     </div>
   </div>
 
@@ -187,9 +206,8 @@
         }
         if (time) {
           const p4 = document.createElement('div');
-          p4.className = 'muted';
-          p4.style.marginTop='0.6rem';
-          p4.textContent = 'Отправлено: ' + time;
+          p4.className = 'reg-date';
+          p4.textContent = 'Зарегистрировано: ' + formatTimestamp(time);
           card.appendChild(p4);
         }
 
@@ -198,6 +216,57 @@
     }
 
     function escapeHtml(s){ return String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;'); }
+
+    /** Format timestamp from Google Sheets to readable date/time (e.g. "6 февраля 2026, 21:20") */
+    function formatTimestamp(raw) {
+      if (raw == null || raw === '') return '';
+      const s = String(raw).trim();
+      let date = null;
+      if (/^\d{4}-\d{2}-\d{2}/.test(s)) {
+        date = new Date(s.replace(' ', 'T'));
+      } else if (/^\d{1,2}[.\/]\d{1,2}[.\/]\d{2,4}/.test(s)) {
+        const parts = s.split(/\s+/);
+        const dPart = parts[0].split(/[.\/]/);
+        const timePart = (parts[1] || '00:00').substring(0, 5);
+        if (dPart.length >= 3) {
+          const day = dPart[0].padStart(2, '0');
+          const month = dPart[1].padStart(2, '0');
+          const y = dPart[2].length === 2 ? '20' + dPart[2] : dPart[2];
+          date = new Date(y + '-' + month + '-' + day + 'T' + timePart + ':00');
+        }
+      } else if (typeof raw === 'number' && raw > 0) {
+        date = new Date((raw - 25569) * 86400 * 1000);
+      }
+      if (!date || isNaN(date.getTime())) return s;
+      const months = ['января','февраля','марта','апреля','мая','июня','июля','августа','сентября','октября','ноября','декабря'];
+      const d = date.getDate();
+      const m = months[date.getMonth()];
+      const y = date.getFullYear();
+      const h = date.getHours();
+      const min = date.getMinutes();
+      const time = (h !== 0 || min !== 0) ? ', ' + String(h).padStart(2,'0') + ':' + String(min).padStart(2,'0') : '';
+      return d + ' ' + m + ' ' + y + time;
+    }
+
+    function updateStats(rows, cols) {
+      const container = document.getElementById('stats');
+      if (!rows || rows.length === 0) {
+        container.innerHTML = '';
+        return;
+      }
+      let presentCount = 0;
+      let absentCount = 0;
+      rows.forEach(r => {
+        const obj = {};
+        cols.forEach((c, i) => { obj[c.label || ('col'+i)] = (r.c[i] && r.c[i].v) ? String(r.c[i].v) : ''; });
+        const present = (obj.attendees_present || '').trim();
+        if (present) presentCount++; else absentCount++;
+      });
+      container.innerHTML =
+        '<div class="stat"><div class="stat-num">' + rows.length + '</div><div class="stat-label">Всего регистраций</div></div>' +
+        '<div class="stat"><div class="stat-num">' + presentCount + '</div><div class="stat-label">Будут на свадьбе</div></div>' +
+        '<div class="stat"><div class="stat-num">' + absentCount + '</div><div class="stat-label">Не будут</div></div>';
+    }
 
     async function loadAndShow() {
       const url = gvizUrl();
@@ -208,8 +277,10 @@
         const cols = json.table.cols;
         const rows = json.table.rows;
         window._allRows = rows; window._allCols = cols;
+        updateStats(rows, cols);
         renderRows(rows, cols);
       } catch (err) {
+        document.getElementById('stats').innerHTML = '';
         document.getElementById('list').innerHTML = '<div class="card center muted">Ошибка загрузки данных: ' + escapeHtml(err.message) + '</div>';
         console.error(err);
       }
@@ -234,6 +305,7 @@
         if (mode === 'absent') return !present || present.trim() === '';
         return true;
       });
+      updateStats(filtered, cols);
       renderRows(filtered, cols);
     }
 
@@ -255,108 +327,6 @@
     // allow Enter key in password field
     document.getElementById('pw').addEventListener('keypress', (e)=>{ if(e.key==='Enter') document.getElementById('pwSubmit').click(); });
   </script>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ответы гостей</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --lavender: #AA83B6;
-      --light-lavender: #D4C1E8;
-      --soft-pink: #F4BBC4;
-      --dusty-pink: #FFDFE5;
-      --white: #FFFFFF;
-      --dark-gray: #333333;
-      --medium-gray: #555555;
-    }
-
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: 'Raleway', sans-serif;
-      color: var(--dark-gray);
-      background: linear-gradient(135deg, rgba(212, 193, 232, 0.35) 0%, rgba(255, 223, 229, 0.45) 60%, rgba(244, 187, 196, 0.25) 100%);
-      min-height: 100vh;
-      padding: 3rem 1rem;
-    }
-    .wrap {
-      max-width: 900px;
-      margin: 0 auto;
-      background: rgba(255, 255, 255, 0.75);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(212, 193, 232, 0.35);
-      border-radius: 18px;
-      padding: 2rem;
-      box-shadow: 0 10px 30px rgba(170, 131, 182, 0.12);
-    }
-    h1 {
-      margin: 0 0 0.75rem;
-      font-family: 'Playfair Display', serif;
-      color: var(--lavender);
-      font-size: clamp(1.8rem, 4vw, 2.5rem);
-    }
-    p {
-      margin: 0.75rem 0;
-      color: var(--medium-gray);
-      line-height: 1.7;
-    }
-    code {
-      background: rgba(212, 193, 232, 0.25);
-      padding: 0.1em 0.35em;
-      border-radius: 6px;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.9rem 1.6rem;
-      border-radius: 999px;
-      text-decoration: none;
-      background: var(--lavender);
-      color: var(--white);
-      font-weight: 500;
-      box-shadow: 0 6px 18px rgba(170, 131, 182, 0.25);
-    }
-    .btn:hover { background: var(--soft-pink); }
-    .note {
-      margin-top: 1.25rem;
-      padding: 1rem 1.1rem;
-      border-left: 4px solid var(--soft-pink);
-      background: rgba(255, 255, 255, 0.75);
-      border-radius: 10px;
-    }
-  </style>
-</head>
-<body>
-  <main class="wrap">
-    <!--<h1>Ответы гостей</h1>
-
-    <p>
-      Если ты используешь <b>Formspree</b>, то ответы хранятся в их панели управления.
-      На статическом хостинге (GitHub Pages) безопасно показать список ответов прямо на странице
-      <b>нельзя</b>, потому что для этого нужен секретный токен.
-    </p>
-
-    <div class="note">
-      <p><b>Как смотреть ответы:</b></p>
-      <p>
-        Открой Formspree → выбери форму → вкладка Submissions (Ответы).
-      </p>
-      <p>
-        Если хочешь именно страницу <code>/guests</code> со списком ответов — можно сделать через Formspree
-        + Google Sheets (вебхук) и читать уже опубликованную таблицу (без сервера).
-      </p>
-    </div> -->
-
-    <a class="btn" href="./index.html">← Назад на приглашение</a>
-  </main>
 </body>
 </html>
 
