--- a/guests.html
+++ b/guests.html
@@ -309,11 +309,13 @@
       renderRows(filtered, cols);
     }
 
-    // password handling
+    // password handling (plain comparison, no encryption — password is visible in page source)
     document.getElementById('pwSubmit').addEventListener('click', () => {
-      const val = document.getElementById('pw').value || '';
-      if (val === PAGE_PASSWORD) {
+      const val = (document.getElementById('pw').value || '').trim();
+      const expected = (PAGE_PASSWORD || '').trim();
+      if (val === expected) {
         document.getElementById('overlay').style.display = 'none';
+        document.getElementById('overlay').setAttribute('aria-hidden', 'true');
         loadAndShow();
       } else {
         alert('Неверный пароль');
