--- a/index.html
+++ b/index.html
@@ -1495,7 +1495,7 @@
                         <div class="timeline-text">Праздничный банкет</div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-time">🤍 22:30</div>
+                        <div class="timeline-time">🤍 23:00</div>
                         <div class="timeline-text">Завершение свадьбы</div>
                     </div>
                 </div>
@@ -1527,6 +1527,8 @@
            <!--   <p class="location-address" style="font-weight: 600; color: var(--lavender);">
                 Мошенского, 66, г. Брест
             </p>-->
+            <a href="https://yandex.by/maps/-/CPQ4fPNz" target="_blank" class="btn" style="margin-top: 1rem;">Как добраться</a>
+
         </div>
 
         <div class="location-block">
@@ -1554,7 +1556,7 @@
             <div class="color-swatch" style="background: #D4C1E8;" title="#D4C1E8"></div>
             <div class="color-swatch" style="background: #F4BBC4;" title="#F4BBC4"></div>
             <div class="color-swatch" style="background: #FFDFE5;" title="#FFDFE5"></div>
-            <div class="color-swatch" style="background: #FFFFFF; border: 2px solid #D4C1E8;" title="#FFFFFF"></div>
+            <div class="color-swatch" style="background: #FFdFFF;" title="#FFFFFF"></div>
         </div>
         <div class="dress-code-examples">
             <div class="dress-code-col">
@@ -1567,7 +1569,7 @@
             <div class="dress-code-col">
                 <div class="dress-code-photo-wrap">
                     <!-- Подставьте адрес фото для джентльменов в src -->
-                    <img src="image/IMG_2862.JPG" alt="Пример для джентльменов" width="280" height="373">
+                    <img src="photo_2026-02-08_15-29-39.jpg" alt="Пример для джентльменов" width="280" height="373">
                 </div>
                 <p class="dress-code-col-caption">Пример для джентльменов</p>
                 <p class="dress-code-col-caption">(любой костюм)</p>
